Enable CSS formatter

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -2,7 +2,7 @@
 	"$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["**/*.ts", "!.wxt/**/*.ts"]
+		"includes": ["**/*.ts", "!.wxt/**/*.ts", "**/*.css"]
 	},
 	"formatter": {
 		"enabled": true,
@@ -20,6 +20,11 @@
 			"source": {
 				"organizeImports": "on"
 			}
+		}
+	},
+	"css": {
+		"formatter": {
+			"enabled": true
 		}
 	}
 }
