--- a/biome.jsonc
+++ b/biome.jsonc
@@ -2,7 +2,7 @@
 	"$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["**/*.ts", "!.wxt/**/*.ts", "**/*.css"]
+		"includes": ["**/*.ts", "!.wxt/**/*.ts", "**/*.css", "!.output/**/*.css"]
 	},
 	"formatter": {
 		"enabled": true,
